Code enhancements due to FindBugs